Updates - mobile improvements. Post-presentation.

--- a/src/css/config/colors.scss
+++ b/src/css/config/colors.scss
@@ -1,6 +1,7 @@
+//BSA RED: CE1126 lightened
 $palettes: (
         main: (
-                primary: #d04554, //BSA RED: CE1126 lightened
+                primary: #d04554,
                 secondary: #FFCC00,
                 background: #333333,
         ),
