--- a/src/css/modules/pageBuilderBlocks/Gallery.module.scss
+++ b/src/css/modules/pageBuilderBlocks/Gallery.module.scss
@@ -11,3 +11,13 @@
     }
   }
 }
+
+.galleryList{
+  width:100%;
+  overflow-x: hidden;
+  .galleryListTitle{
+    color:white;
+  }
+  .galleryListImg{
+  }
+}
