--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -65,7 +65,7 @@ a {
 }
 
 .y-space{
-  margin: 40px;
+  margin: 40px 0;
 }
 
 .v-center{
@@ -89,6 +89,14 @@ a {
   font-size:settings(fontSize, default);
   color:white;
   line-height:1.4;
+  a{
+    color:white;
+
+  }
+}
+
+.text-center{
+  text-align:center;
 }
 
 .responsive-img{
@@ -98,9 +106,43 @@ a {
 
 #page{
   min-height: 80vh;
+  width:100%;
+  overflow-x: hidden;
 }
 
 .btn-white{
   border-color:white!important;
   color:white!important;
+}
+
+.text-editor-output{
+  p{
+    &:nth-child(1){
+      margin-top:0;
+    }
+    &:last-child{
+      margin-bottom: 0;
+    }
+  }
+}
+
+
+@media (min-width:769px){
+  .desktop-only{
+    display:block;
+  }
+  .mobile-only{
+    display:none;
+  }
+}
+@media (max-width:768px){
+  .desktop-only{
+    display:none;
+  }
+  .mobile-only{
+    display:block;
+  }
+}
+.grid-center{
+  justify-content: center;
 }
