--- a/src/css/modules/TopModal.module.scss
+++ b/src/css/modules/TopModal.module.scss
@@ -9,6 +9,10 @@
   display:flex;
   align-items: center;
   justify-content: center;
+  img{
+    width:100%;
+    height:auto;
+  }
   .close{
     position:absolute;
     right:10px;
