--- a/src/css/modules/Header.module.scss
+++ b/src/css/modules/Header.module.scss
@@ -14,7 +14,11 @@
     margin:10px 0;
     padding:0;
     background-color:rgba(0,0,0,.25);
-    color:color(grey,darker);
+    border-color:white;
+    color:white;
+    &:hover{
+      background-color:rgba(0,0,0,.7);
+    }
   }
 }
 
