--- a/src/css/modules/pageBuilderBlocks/HeaderSlider.module.scss
+++ b/src/css/modules/pageBuilderBlocks/HeaderSlider.module.scss
@@ -95,7 +95,11 @@
       }
       margin-left:20px;
       border-radius: 50%;
-      transition: 0.7s background-color ease-out;
+      transition: 0.3s all ease-out;
+      transform:scale(1);
+      &:hover{
+        transform:scale(1.3);
+      }
       &.navDotActive{
         background-color:white;
       }
