Feat/milestone react17 (#3)

--- a/src/css/modules/pageBuilderBlocks/ContactForm.module.scss
+++ b/src/css/modules/pageBuilderBlocks/ContactForm.module.scss
@@ -1,5 +1,4 @@
 .root{
-  background-image: url(/img/textures/texture-02.jpg);
   background-size:cover;
   background-repeat: no-repeat;
   padding:70px 0;
@@ -10,5 +9,6 @@
   }
   .formInput{
     width:100%;
+    background-color: #ddd;
   }
 }
